@@ -80,7 +80,7 @@ class RecordsContentObject extends \TYPO3\CMS\Frontend\ContentObject\AbstractCon
 				$GLOBALS['TSFE']->sys_page->versionOL($val['table'], $row);
 				// Language overlay:
 				if (is_array($row) && $GLOBALS['TSFE']->sys_language_contentOL) {
-					$row = $GLOBALS['TSFE']->sys_page->getRecordOverlay($val['table'], $row, $GLOBALS['TSFE']->sys_language_content, $GLOBALS['TSFE']->sys_language_contentOL);
+					$row = $GLOBALS['TSFE']->sys_page->getRecordOverlayWithFallback($val['table'], $row);
 				}
 				// Might be unset in the content overlay things...
 				if (is_array($row)) {
